# wechatauto

./: .gitignore  README.md  pyproject.toml  run_test.sh  wechatauto.db
assets/templates/macos/: README.md
docs/: ARCHITECTURE.md  MILESTONES.md  YOLO_TRAINING.md
scripts/: dataset_from_runs.py  llm_fallback.py
tests/: test_bbox.py  test_closed_loop.py  test_layout.py  test_planner.py  test_runner.py  test_windows_platform.py
wechat_agent/actions/: base.py  closed_loop.py
wechat_agent/app/: cli.py  config.py  main.py
wechat_agent/core/: errors.py  events.py  models.py  planner.py  runner.py  send_guard.py  state.py  task.py
wechat_agent/perception/: bbox.py  detector.py  layout.py  llm_fallback.py  ocr.py  pipeline.py  semantic_parser.py  vlm_openai.py  vlm_qwen.py  vlm_utils.py  yolo_detector.py
wechat_agent/platform/: auto.py  noop.py  ports.py
wechat_agent/platform/macos/: input.py  osascript.py  platform.py  screen.py  window.py
wechat_agent/platform/windows/: platform.py
wechat_agent/prompts/: reply_prompt.py
wechat_agent/recovery/: __init__.py  fallback.py  retry.py
wechat_agent/storage/: __init__.py  db.py  logger.py  replay.py
