[project]
name = "wechatauto"
version = "0.1.0"
description = "Cross-platform WeChat PC automation agent (vision-first)."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
vlm = [
  "openai>=1.0.0",
]

[project.scripts]
wechatauto = "wechat_agent.app.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
